// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"dirigeant . indépendant . cotisations et contributions: 1182
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6182
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 19
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"dirigeant . indépendant . cotisations et contributions: 4356
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19376
entreprise . chiffre d'affaires: 24356
impôt . montant: 624
protection sociale . retraite . base: 861
protection sociale . retraite . complémentaire: 77
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"dirigeant . indépendant . cotisations et contributions: 23180
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41140
entreprise . chiffre d'affaires: 73180
impôt . montant: 8860
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 199
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 1`] = `
"dirigeant . indépendant . cotisations et contributions: 23076
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40828
entreprise . chiffre d'affaires: 73076
impôt . montant: 9172
protection sociale . retraite . base: 1833
protection sociale . retraite . complémentaire: 206
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 2`] = `
"dirigeant . indépendant . cotisations et contributions: 18995
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 33630
entreprise . chiffre d'affaires: 58995
impôt . montant: 6370
protection sociale . retraite . base: 1714
protection sociale . retraite . complémentaire: 166
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV années précédentes 3`] = `
"dirigeant . indépendant . cotisations et contributions: 13944
dirigeant . rémunération . net: 30000
dirigeant . rémunération . net . après impôt: 26656
entreprise . chiffre d'affaires: 43944
impôt . montant: 3344
protection sociale . retraite . base: 1297
protection sociale . retraite . complémentaire: 124
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions: 32575
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47968
entreprise . chiffre d'affaires: 92575
impôt . montant: 12032
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 243
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions: 34199
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47984
entreprise . chiffre d'affaires: 94199
impôt . montant: 12016
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 243
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions: 31282
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47987
entreprise . chiffre d'affaires: 91282
impôt . montant: 12013
protection sociale . retraite . base: 1734
protection sociale . retraite . complémentaire: 155
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions: 34232
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47966
entreprise . chiffre d'affaires: 94232
impôt . montant: 12034
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 243
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions: 31292
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47983
entreprise . chiffre d'affaires: 91292
impôt . montant: 12017
protection sociale . retraite . base: 1734
protection sociale . retraite . complémentaire: 156
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions: 2748
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 3748
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"dirigeant . indépendant . cotisations et contributions: 32575
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47968
entreprise . chiffre d'affaires: 92575
impôt . montant: 12032
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 243
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"dirigeant . indépendant . cotisations et contributions: 18662
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 34332
entreprise . chiffre d'affaires: 58662
impôt . montant: 5668
protection sociale . retraite . base: 1720
protection sociale . retraite . complémentaire: 154
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `
"dirigeant . indépendant . cotisations et contributions: 4183
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 14183
impôt . montant: 0
protection sociale . retraite . base: 432
protection sociale . retraite . complémentaire: 39
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `
"dirigeant . indépendant . cotisations et contributions: 23180
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 41140
entreprise . chiffre d'affaires: 73180
impôt . montant: 8860
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 199
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `
"dirigeant . indépendant . cotisations et contributions: 40675
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73139
entreprise . chiffre d'affaires: 140675
impôt . montant: 26861
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 420
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions: 1407
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
entreprise . chiffre d'affaires: 1907
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions: 1497
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2497
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 4
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1586
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
entreprise . chiffre d'affaires: 3086
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 6
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"dirigeant . indépendant . cotisations et contributions: 1676
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
entreprise . chiffre d'affaires: 3676
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 8
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"dirigeant . indépendant . cotisations et contributions: 2214
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 7214
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 20
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"dirigeant . indépendant . cotisations et contributions: 4183
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 14183
impôt . montant: 0
protection sociale . retraite . base: 432
protection sociale . retraite . complémentaire: 39
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"dirigeant . indépendant . cotisations et contributions: 40675
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 73139
entreprise . chiffre d'affaires: 140675
impôt . montant: 26861
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 420
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"dirigeant . indépendant . cotisations et contributions: 243081
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 528702
entreprise . chiffre d'affaires: 1243081
impôt . montant: 471298
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 769
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"dirigeant . indépendant . cotisations et contributions: 9109
dirigeant . rémunération . net: 20891
dirigeant . rémunération . net . après impôt: 20025
entreprise . chiffre d'affaires: 30000
impôt . montant: 866
protection sociale . retraite . base: 924
protection sociale . retraite . complémentaire: 83
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"dirigeant . indépendant . cotisations et contributions: 9020
dirigeant . rémunération . net: 20980
dirigeant . rémunération . net . après impôt: 20141
entreprise . chiffre d'affaires: 30000
impôt . montant: 839
protection sociale . retraite . base: 917
protection sociale . retraite . complémentaire: 82
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"dirigeant . indépendant . cotisations et contributions: 76351
dirigeant . rémunération . net: 223649
dirigeant . rémunération . net . après impôt: 140383
entreprise . chiffre d'affaires: 300000
impôt . montant: 83266
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 769
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"dirigeant . indépendant . cotisations et contributions: 17952
dirigeant . rémunération . net: 32048
dirigeant . rémunération . net . après impôt: 26805
entreprise . chiffre d'affaires: 50000
impôt . montant: 5243
protection sociale . retraite . base: 1661
protection sociale . retraite . complémentaire: 149
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"dirigeant . indépendant . cotisations et contributions: 17742
dirigeant . rémunération . net: 32258
dirigeant . rémunération . net . après impôt: 27141
entreprise . chiffre d'affaires: 50000
impôt . montant: 5117
protection sociale . retraite . base: 1643
protection sociale . retraite . complémentaire: 147
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"dirigeant . indépendant . cotisations et contributions: 6308
dirigeant . rémunération . net: 13692
dirigeant . rémunération . net . après impôt: 13692
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 663
protection sociale . retraite . complémentaire: 60
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"dirigeant . indépendant . cotisations et contributions: 16174
dirigeant . rémunération . net: 33826
dirigeant . rémunération . net . après impôt: 29661
entreprise . chiffre d'affaires: 50000
impôt . montant: 4165
protection sociale . retraite . base: 1511
protection sociale . retraite . complémentaire: 135
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"dirigeant . indépendant . cotisations et contributions: 16445
dirigeant . rémunération . net: 33555
dirigeant . rémunération . net . après impôt: 29227
entreprise . chiffre d'affaires: 50000
impôt . montant: 4328
protection sociale . retraite . base: 1534
protection sociale . retraite . complémentaire: 137
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"dirigeant . indépendant . cotisations et contributions: 13748
dirigeant . rémunération . net: 36252
dirigeant . rémunération . net . après impôt: 33598
entreprise . chiffre d'affaires: 50000
impôt . montant: 2654
protection sociale . retraite . base: 1301
protection sociale . retraite . complémentaire: 116
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"dirigeant . indépendant . cotisations et contributions: 71637
dirigeant . rémunération . net: 228363
dirigeant . rémunération . net . après impôt: 154954
entreprise . chiffre d'affaires: 300000
impôt . montant: 73409
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 769
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"dirigeant . indépendant . cotisations et contributions: 87917
dirigeant . rémunération . net: 312083
dirigeant . rémunération . net . après impôt: 202660
entreprise . chiffre d'affaires: 400000
impôt . montant: 109423
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 769
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"dirigeant . indépendant . cotisations et contributions: 35908
dirigeant . rémunération . net: 84092
dirigeant . rémunération . net . après impôt: 63653
entreprise . chiffre d'affaires: 120000
impôt . montant: 20439
protection sociale . retraite . base: 1932
protection sociale . retraite . complémentaire: 354
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"dirigeant . indépendant . cotisations et contributions: 16445
dirigeant . rémunération . net: 33555
dirigeant . rémunération . net . après impôt: 29227
entreprise . chiffre d'affaires: 50000
impôt . montant: 4328
protection sociale . retraite . base: 1534
protection sociale . retraite . complémentaire: 137
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"dirigeant . indépendant . cotisations et contributions: 17480
dirigeant . rémunération . net: 32520
dirigeant . rémunération . net . après impôt: 27562
entreprise . chiffre d'affaires: 50000
impôt . montant: 4958
protection sociale . retraite . base: 1621
protection sociale . retraite . complémentaire: 145
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"dirigeant . indépendant . cotisations et contributions: 6031
dirigeant . rémunération . net: 13969
dirigeant . rémunération . net . après impôt: 13969
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 633
protection sociale . retraite . complémentaire: 56
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1748
dirigeant . rémunération . net: 2252
dirigeant . rémunération . net . après impôt: 2252
entreprise . chiffre d'affaires: 4000
impôt . montant: 0
protection sociale . retraite . base: 219
protection sociale . retraite . complémentaire: 9
protection sociale . retraite . trimestres: 3

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"dirigeant . indépendant . cotisations et contributions: 6031
dirigeant . rémunération . net: 13969
dirigeant . rémunération . net . après impôt: 13969
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 633
protection sociale . retraite . complémentaire: 56
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"dirigeant . indépendant . cotisations et contributions: 6031
dirigeant . rémunération . net: 13969
dirigeant . rémunération . net . après impôt: 13969
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 633
protection sociale . retraite . complémentaire: 56
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"dirigeant . indépendant . cotisations et contributions: 6031
dirigeant . rémunération . net: 13969
dirigeant . rémunération . net . après impôt: 13969
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 633
protection sociale . retraite . complémentaire: 56
protection sociale . retraite . trimestres: 4

Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;
